Fixed font scale,overlapping and responsiveness

--- a/weather/css/style.css
+++ b/weather/css/style.css
@@ -1,18 +1,18 @@
-body {
+html,body {
   background-color: #E0F2F1;
+  height:100%;
 }
+
 .app-content {
-  width: 60%;
-  overflow-y: scroll;
-  overflow-x: auto;
-  margin-top: 60px;
+  width: 70%;
+  left: 10%;
+  right: 10%;
+  overflow: auto;
+
 }
-md-input-container {
-  height: 50px;
-  position: fixed;
-  top: 70px;
-  left: 100px;
-  right: 100px;
+.searchBar {
+  position: relative;
+  width: 70%;
 }
 md-toolbar {
   border-style: solid;
@@ -25,6 +25,8 @@ md-toolbar {
 }
 md-card {
   font-family: 'Crete Round', serif;
+  font-size: 16px;
+  font-size: 1.4vw;
   width: 100%;
   text-indent: 25px;
   margin: auto;
@@ -82,7 +84,7 @@ md-content {
   }
 }
 .app-content::-webkit-scrollbar {
-  width: 1em;
+  width: 0.3em;
 }
 .app-content::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px #AED581;
